Make it a bit more user friendly.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
 <body>
 
-<canvas id="canvas" width="1200" height="800"></canvas>
+<canvas id="canvas" width="1000" height="600"></canvas>
+
+<h1>Gates</h1>
+<p>Use the arrow keys to fly around. Currently hitting things doesn't do anything. Use Z and X to zoom the camera in and out.</p>
 
 </body>
 
